# distillery

./: .env.example  .gitignore  BUILD-TASK.md  LICENSE  README.md  SPEC.md  pyproject.toml
distillery/: __init__.py  cli.py  db.py  deliver.py  distill.py  extract.py  migrate.py  render.py  upload.py
distillery/adapters/: __init__.py  newsletter.py  twitter.py  url.py  youtube.py  youtube_channels.py
prompts/: summarize.md
